fixed translation clusters so they have tokenized idioms; created methods for finding the negative and positive samples in a batch given the anchor; fixed the get_batch method; everything using tensors now;

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "from torch import nn\n",
     "import torch\n",
     "import csv\n",
-    "from random import shuffle"
+    "from random import choice\n",
+    "from copy import deepcopy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -31,6 +32,8 @@
     "idioms = set()\n",
     "encoder = {}\n",
     "tokenizer = AutoTokenizer.from_pretrained('xlm-roberta-base')\n",
+    "\n",
+    "# Load data\n",
     "\n",
     "with open('dataset.csv') as f:\n",
     "\treader = csv.DictReader(f)\n",
@@ -48,11 +51,14 @@
     "\t\tidioms.add(row['english'])\n",
     "\t\tidioms.add(row['german'])\n",
     "\n",
+    "# Form translation clusters\n",
+    "\n",
     "max_length = 0\n",
     "\n",
     "for idiom in idioms:\n",
     "\tfor match in translation_clusters[idiom]:\n",
     "\t\ttranslation_clusters[idiom] = translation_clusters[idiom].union(translation_clusters[match])\n",
+    "\ttranslation_clusters[idiom].remove(idiom)\n",
     "\n",
     "\tencoded = tokenizer(idiom, return_tensors='pt').input_ids\n",
     "\tmax_length = max(max_length, encoded.shape[1])\n",
@@ -61,6 +67,8 @@
     "\n",
     "num_idioms = len(idioms)\n",
     "decoder = {}\n",
+    "\n",
+    "# Generate idiom tensor\n",
     "\n",
     "idiom_tensor = torch.full(size=(num_idioms, max_length), fill_value=-1)\n",
     "for i, idiom in enumerate(idioms):\n",
@@ -71,12 +79,22 @@
     "\n",
     "assert decoder[tuple(encoder['makes me feel like'].tolist())] == 'makes me feel like'\n",
     "\n",
+    "# Convert idiom clusters to tokenized representations\n",
+    "\n",
+    "for idiom in deepcopy(translation_clusters):\n",
+    "\ttranslation_clusters[tuple(encoder[idiom].tolist())] = set()\n",
+    "\n",
+    "\tfor match in translation_clusters[idiom]:\n",
+    "\t\ttranslation_clusters[tuple(encoder[idiom].tolist())].add(tuple(encoder[match].tolist()))\n",
+    "\n",
+    "\tdel translation_clusters[idiom]\n",
+    "\n",
     "print(idiom_tensor.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,37 +119,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tensor_to_set(tensor):\n",
+    "    return  {tuple(d.tolist()) for d in tensor}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "240\n"
+      "torch.Size([124, 24])\n"
      ]
     }
    ],
    "source": [
     "def get_batch(data):\n",
-    "    indexes = torch.randint(0, len(data), (batch_size,))\n",
-    "    data = set()\n",
+    "\tindexes = torch.randint(0, len(data), (batch_size,))\n",
+    "\tbatch = set()\n",
+    "\tset_data = tensor_to_set(data)\n",
+    "\tc = 0\n",
     "\n",
-    "    for i in indexes:\n",
-    "        data.add(tuple(idiom_tensor[i].tolist()))\n",
-    "        idiom = decoder[tuple(idiom_tensor[i].tolist())]\n",
-    "        for clust in translation_clusters[idiom]:\n",
-    "            data.add(tuple(encoder[clust].tolist()))\n",
+    "\tfor i in indexes:\n",
+    "\t\tidiom = data[i]\n",
+    "\t\tbatch.add(tuple(idiom.tolist()))\n",
     "\n",
-    "    data = [list(x) for x in list(data)]\n",
-    "    return torch.tensor(data)\n",
+    "\t\tpossible_idioms = set_data.intersection(translation_clusters[tuple(idiom.tolist())])\n",
     "\n",
-    "print(len(get_batch(train)))"
+    "\t\tif possible_idioms == set():\n",
+    "\t\t\tc+=1\n",
+    "\t\t\tcontinue\n",
+    "\n",
+    "\t\trandom_cluster_mate = choice(list(possible_idioms))\n",
+    "\t\tbatch.add(tuple(random_cluster_mate))\n",
+    "\n",
+    "\tbatch = [list(x) for x in list(batch)]\n",
+    "\treturn torch.tensor(batch)\n",
+    "\n",
+    "print(get_batch(train).shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_positive_sample(anchor, data):\n",
+    "\tpossible_positive = translation_clusters[tuple(anchor.tolist())].intersection(tensor_to_set(data))\n",
+    "\treturn torch.tensor(choice(list(possible_positive)))\n",
+    "\n",
+    "batch = get_batch(train)\n",
+    "positive_sample = get_positive_sample(batch[0], batch)\n",
+    "\n",
+    "assert (positive_sample in batch) and (tuple(positive_sample.tolist()) in translation_clusters[tuple(batch[0].tolist())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_negative_sample(anchor, data):\n",
+    "    possible_negative = tensor_to_set(data).difference(translation_clusters[tuple(anchor.tolist())])\n",
+    "    return torch.tensor(choice(list(possible_negative)))\n",
+    "\n",
+    "negative_sample = get_negative_sample(batch[0], batch)\n",
+    "\n",
+    "assert (negative_sample in batch) and (negative_sample not in translation_clusters[tuple(batch[0].tolist())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
