--- a/main.ipynb
+++ b/main.ipynb
@@ -131,31 +131,31 @@
     "tokenizer = AutoTokenizer.from_pretrained('xlm-roberta-base')\n",
     "\n",
     "with open('dataset.csv') as f:\n",
-    "    reader = csv.DictReader(f)\n",
-    "    for row in reader:\n",
-    "        idiom = row['english']\n",
-    "        translation = row['german']\n",
-    "        idioms.add(idiom)\n",
-    "        idioms.add(translation)\n",
+    "\treader = csv.DictReader(f)\n",
+    "\tfor row in reader:\n",
+    "\t\tidiom = row['english']\n",
+    "\t\ttranslation = row['german']\n",
+    "\t\tidioms.add(idiom)\n",
+    "\t\tidioms.add(translation)\n",
     "\n",
-    "        if idiom in translation_clusters:\n",
-    "            translation_clusters[idiom].add(translation)\n",
-    "        else:\n",
-    "            translation_clusters[idiom] = {translation}\n",
+    "\t\tif idiom in translation_clusters:\n",
+    "\t\t\ttranslation_clusters[idiom].add(translation)\n",
+    "\t\telse:\n",
+    "\t\t\ttranslation_clusters[idiom] = {translation}\n",
     "\n",
-    "        if translation in translation_clusters:\n",
-    "            translation_clusters[translation].add(idiom)\n",
-    "        else:\n",
-    "            translation_clusters[translation] = {idiom}\n",
+    "\t\tif translation in translation_clusters:\n",
+    "\t\t\ttranslation_clusters[translation].add(idiom)\n",
+    "\t\telse:\n",
+    "\t\t\ttranslation_clusters[translation] = {idiom}\n",
     "\n",
     "# Convert idioms to tokenized representations\n",
     "max_length = 0\n",
     "encoder = {}\n",
     "\n",
     "for idiom in idioms:\n",
-    "    encoded = tokenizer(idiom, return_tensors='pt', padding=True, truncation=True).input_ids\n",
-    "    max_length = max(max_length, encoded.shape[1])\n",
-    "    encoder[idiom] = encoded\n",
+    "\tencoded = tokenizer(idiom, return_tensors='pt', padding=True, truncation=True).input_ids\n",
+    "\tmax_length = max(max_length, encoded.shape[1])\n",
+    "\tencoder[idiom] = encoded\n",
     "\n",
     "num_idioms = len(idioms)\n",
     "decoder = {}\n",
@@ -163,20 +163,20 @@
     "# Generate idiom tensor\n",
     "idiom_tensor = torch.zeros(size=(num_idioms, max_length), dtype=torch.long)\n",
     "for i, idiom in enumerate(idioms):\n",
-    "    encoded = encoder[idiom]\n",
-    "    idiom_tensor[i, :encoded.shape[1]] = encoded[0]\n",
-    "    encoder[idiom] = idiom_tensor[i]\n",
-    "    decoder[tuple(idiom_tensor[i].tolist())] = idiom\n",
+    "\tencoded = encoder[idiom]\n",
+    "\tidiom_tensor[i, :encoded.shape[1]] = encoded[0]\n",
+    "\tencoder[idiom] = idiom_tensor[i]\n",
+    "\tdecoder[tuple(idiom_tensor[i].tolist())] = idiom\n",
     "\n",
     "assert decoder[tuple(encoder['makes me feel like'].tolist())] == 'makes me feel like'\n",
     "\n",
     "# Convert idiom clusters to tokenized representations\n",
     "translation_clusters_tokenized = {}\n",
     "for idiom in translation_clusters:\n",
-    "    translation_clusters_tokenized[tuple(encoder[idiom].tolist())] = set()\n",
-    "    for match in translation_clusters[idiom]:\n",
-    "        if tuple(encoder[match].tolist()) == tuple(encoder[idiom].tolist()): continue\n",
-    "        translation_clusters_tokenized[tuple(encoder[idiom].tolist())].add(tuple(encoder[match].tolist()))\n",
+    "\ttranslation_clusters_tokenized[tuple(encoder[idiom].tolist())] = set()\n",
+    "\tfor match in translation_clusters[idiom]:\n",
+    "\t\tif tuple(encoder[match].tolist()) == tuple(encoder[idiom].tolist()): continue\n",
+    "\t\ttranslation_clusters_tokenized[tuple(encoder[idiom].tolist())].add(tuple(encoder[match].tolist()))\n",
     "\n",
     "# Print the shape of idiom_tensor\n",
     "print(idiom_tensor.shape)\n",
@@ -300,16 +300,16 @@
     "batch_accumulation = 1\n",
     "\n",
     "wandb.init(\n",
-    "    project=\"Cross-Lingual-Idiom-Sense-Clustering\",\n",
-    "    \n",
-    "    # track hyperparameters and run metadata\n",
-    "    config={\n",
-    "    \"learning_rate\": learning_rate,\n",
-    "    \"architecture\": \"BERT\",\n",
-    "    \"batch_size\": batch_size*batch_accumulation*2,\n",
-    "    \"epochs\": iterations,\n",
-    "    \"embedding_dimensions\":latent_dimensions,\n",
-    "    }\n",
+    "\tproject=\"Cross-Lingual-Idiom-Sense-Clustering\",\n",
+    "\t\n",
+    "\t# track hyperparameters and run metadata\n",
+    "\tconfig={\n",
+    "\t\"learning_rate\": learning_rate,\n",
+    "\t\"architecture\": \"BERT\",\n",
+    "\t\"batch_size\": batch_size*batch_accumulation*2,\n",
+    "\t\"epochs\": iterations,\n",
+    "\t\"embedding_dimensions\":latent_dimensions,\n",
+    "\t}\n",
     ")\n"
    ]
   },
@@ -329,7 +329,7 @@
    "outputs": [],
    "source": [
     "def tensor_to_set(tensor):\n",
-    "    return {tuple(d.tolist()) for d in tensor}"
+    "\treturn {tuple(d.tolist()) for d in tensor}"
    ]
   },
   {
@@ -400,32 +400,32 @@
    "outputs": [],
    "source": [
     "def get_positive_sample(data):\n",
-    "    positive_samples = []\n",
+    "\tpositive_samples = []\n",
     "\n",
-    "    for anchor in data:\n",
-    "        possible_positive = translation_clusters[tuple(anchor.tolist())].intersection(tensor_to_set(data))\n",
+    "\tfor anchor in data:\n",
+    "\t\tpossible_positive = translation_clusters[tuple(anchor.tolist())].intersection(tensor_to_set(data))\n",
     "\n",
     "\n",
-    "        chosen = torch.tensor(choice(list(possible_positive)))\n",
-    "        positive_samples.append(chosen)\n",
+    "\t\tchosen = torch.tensor(choice(list(possible_positive)))\n",
+    "\t\tpositive_samples.append(chosen)\n",
     "\n",
-    "    positive_samples = torch.stack(positive_samples).to(device)\n",
+    "\tpositive_samples = torch.stack(positive_samples).to(device)\n",
     "\n",
-    "    return positive_samples\n",
+    "\treturn positive_samples\n",
     "\n",
     "\n",
     "def get_negative_sample(data):\n",
-    "    negative_samples = []\n",
+    "\tnegative_samples = []\n",
     "\n",
-    "    for anchor in data:\n",
-    "        possible_negative = tensor_to_set(data).difference(translation_clusters[tuple(anchor.tolist())])\n",
+    "\tfor anchor in data:\n",
+    "\t\tpossible_negative = tensor_to_set(data).difference(translation_clusters[tuple(anchor.tolist())])\n",
     "\n",
-    "        chosen = torch.tensor(choice(list(possible_negative)))\n",
-    "        negative_samples.append(chosen)\n",
+    "\t\tchosen = torch.tensor(choice(list(possible_negative)))\n",
+    "\t\tnegative_samples.append(chosen)\n",
     "\n",
-    "    negative_samples = torch.stack(negative_samples).to(device)\n",
+    "\tnegative_samples = torch.stack(negative_samples).to(device)\n",
     "\n",
-    "    return negative_samples"
+    "\treturn negative_samples"
    ]
   },
   {
